# amdsense

./: .gitignore  README.md  autoresearch_agent3.py  autoresearch_agent5.py  diagnose_monitoring.sh  findings.md  monitoring_bug_report.txt  nvidia_4090_comparison.md  nvidia_4090_results.json  profile_report.md  profile_rocm.py  prompt.md  pyproject.toml  rocm_issue_amd_smi.md  round3_report.md  round4_report.md  round5_report.md  round6_report.md  runpod_benchmark.sh  train.py
reports/: compiled_adam_kernel_analysis.md  diag25_math_ops_subnormal_test.py  findings_torch_compile_nan_gfx1151.md  minimal_reproducer_subnormal_nan.py  repro_torch_compile_adam_nan.py  rocm_gfx1151_related_issues.md  rocm_issues_quick_reference.md
round4_results/: best_recipe.json  phase1a_aspect_ratio.json  phase1b_head_dim.json  phase1c_warmdown.json  phase1d_matrix_lr.json  phase1e_depth.json  phase1f_window_pattern.json  phase1g_confirmation.json  phase2_memory_wall.json
round5_results/: best_recipe.json  phase1a_embedding_lr.json  phase1b_unembedding_lr.json  phase1c_scalar_lr.json  phase1d_final_lr_frac.json  phase1e_matrix_lr.json  phase2a_weight_decay.json  phase2b_adam_beta1.json  phase2c_adam_beta2.json  phase3a_batch_size.json  phase4_interactions.json  phase5_extended.json  phase6_memory_wall.json
round6_results/: phase1_window_patterns.json  phase2_gqa.json  phase3_mlp_ratio.json  phase4a_x0_lambda.json  phase4b_resid_lambda.json  phase5_depth_scaling.json  phase6_softcap.json  phase7_combined.json
