[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kernels>=0.11.7",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.9.1",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[tool.uv.sources]
torch = [
    { index = "therock-gfx1151" },
]

[[tool.uv.index]]
name = "therock-gfx1151"
url = "https://rocm.nightlies.amd.com/v2/gfx1151/"
explicit = true
