[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "kernels>=0.12.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "requests>=2.32.5",
    "rustbpe>=0.1.0",
    "tiktoken>=0.12.0",
    "torch==2.9.1+rocm7.13.0a20260316",
    "triton==3.5.1+rocm7.13.0a20260316",
    "rocm==7.13.0a20260316",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
environments = ["python_version >= '3.12' and sys_platform == 'linux'"]
override-dependencies = ["triton==3.5.1+rocm7.13.0a20260316"]

[tool.uv.sources]
torch = [
    { index = "therock-gfx1151" },
]
triton = [
    { index = "therock-gfx1151" },
]
rocm = [
    { index = "therock-gfx1151" },
]

[[tool.uv.index]]
name = "therock-gfx1151"
url = "https://rocm.nightlies.amd.com/v2/gfx1151/"
